# digital-spiral

./: .env.example  .gitignore  ADMIN_UI_FIXES.md  ADMIN_UI_QUICK_START.md  ADMIN_UI_SUMMARY.md  AGENTS.md  AI_ASSISTANT_FIXED.md  AI_ASSISTANT_INTEGRATED.md  AI_ASSISTANT_RUNNING.md  ALL_SERVICES_RUNNING.md  AUGGIE.md  CHANGELOG.md  CONFIGURATION.md  CONSTITUTION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  FEATURE_004_COMPLETE.md  FINAL_FIX.md  FINAL_FIXES_SUMMARY.md  FINAL_PROGRESS_REPORT.md  FINAL_SUMMARY.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INFINITE_LOOP_FIX.md  MCP_QUICKSTART.md  Makefile  NEXTAUTH_FIX_FINAL.md  NEXTAUTH_LOGIN_FIX.md  OAUTH2_IMPLEMENTATION.md  OAUTH_FIX.md  PHASE_4_PROGRESS.md  PROJECT_STATUS.md  PULL_REQUEST.md  PULSE_README.md  PUSH_GUIDE.md  QUICKSTART_FEATURE_004.md  QUICK_START.md  (+23 more)
.auggie/: commands.json
.specify/: README.md
admin-ui/: .eslintrc.json  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
artifacts/: .gitignore  credit-ledger.jsonl  seed.json
clients/: __init__.py
demo-ui/: index.html  real-jira.html
digital_spiral/: __init__.py  spiral_mask.py  train_spiral_copy.py
docker/: README.md  docker-compose.dev.yml  docker-compose.prod.yml  init-db.sql
docs/: AI_ASSISTANT_QUICKSTART.md  AI_ASSISTANT_README.md  AI_CHAINING_GUIDE.md  AI_SUPPORT_COPILOT_PRODUCT.md  AI_SUPPORT_COPILOT_SETUP.md  AI_VISUALIZATION_SYSTEM.md  API_EXAMPLES.md  COMPLETE_REALISTIC_PROJECT.md  COMPLETE_SETUP_SUMMARY.md  DEPLOYMENT.md  ENRICH_JIRA_DATA.md  PULSE_QUICKSTART.md  (+18 more)
(+427 files in other folders)
