[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-jira-server"
version = "0.1.0"
description = "Stateful mock server for Jira Cloud APIs"
authors = [{name = "AI Assistant"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "httpx>=0.27",
    "requests>=2.32",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
]

[project.scripts]
mock-jira-server = "mockjira.main:run"

[tool.setuptools.packages.find]
include = ["mockjira*", "clients*", "mcp_jira*", "examples*"]
